# EM2

./: .gitmodules  CMakeLists.txt
em2-gr-main/: CMakeLists.txt  em2_simplified.param.toml  em3_simplified.param.toml
em2-gr-main/gencode/: solver_physcon_deriv_calc.cpp.inc  solver_physcon_deriv_memalloc.cpp.inc  solver_physcon_eqns.cpp.inc  solver_rhs_deriv_calc.cpp.inc  solver_rhs_deriv_memalloc.cpp.inc  solver_rhs_eqns.cpp.inc  solver_rhs_ko_deriv_calc.cpp.inc
em2-gr-main/solver/: CMakeLists.txt  solver_main.cpp
em2-gr-main/solver/include/: compact_derivs.h  grDef.h  grUtils.h  parameters.h
em2-gr-main/solver/src/: compact_derivs.cpp  derivs.cpp  grUtils.cpp  parameters.cpp  physcon.cpp  rhs.cpp  rkSolver.cpp  solverCtx.cpp
em2-gr-main/solver/src/Initial_data_types/: Dipole_pulse.cpp
gencode/: solver_rhs_eqns.cpp.inc
solver/: CMakeLists.txt
solver/include/: compact_derivs.h  grDef.h  grUtils.h  solver_main.h
solver/src/: compact_derivs.cpp  grUtils.cpp  physcon.cpp  rhs.cpp  solverCtx.cpp
solver/src/Initial_data_types/: Dipole_pulse.cpp
